--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,21 @@
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
+        "files": [
+            "config/init.php",
+            "config/params.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "classmap": [
+            "database/seeders",
+            "database/factories",
+            "app/SBlog/Core"
+        ]
+
     },
     "autoload-dev": {
         "psr-4": {
